# incidents-manager

./: .gitignore  notes.txt  pyproject.toml
app/: config.py  crud.py  database.py  exceptions.py  main.py  models delete.py  models.py  schemas delete.py  websocket_manager.py
app/dao/: base.py  incidents.py
app/incidents/: models.py  recommendations.py  risk.py  router.py  schemas.py
app/users/: auth.py  dependencies.py  models.py  permissions.py  router.py  schemas.py
incident-frontend/: package-lock.json  package.json
incident-frontend/src/: App.js  CreateIncidentModal.js  Header.js  IncidentList.js  Login.js  index.css  index.js  queryClient.js
incident-frontend/src/components/: DeleteIncidentModal.js
incident-frontend/src/components/analytics/: DashboardCharts.js
incident-frontend/src/components/dashboard/: DashboardPage.js
incident-frontend/src/components/incidents/: IncidentCard.js  IncidentDetailsModal.js  IncidentFilters.js  IncidentList.js  IncidentStats.js  RecentActivity.js
incident-frontend/src/hooks/: useDashboard.js  useIncidents.js
incident-frontend/src/providers/: WebSocketProvider.js
incident_assistant/: pyproject.toml
